# atlas-ai-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  atlas_agent.py  formatter_agent.py  research_agent.py  summarizer_agent.py  transcript_fetcher.py
core/: __init__.py  utils.py
processors/: __init__.py  section_splitter.py  transcript_fetcher.py
transcript_file/: sections_dqs8D3xfxsc.json
transcript_files/: enrichment_data_p3qvj9hO_Bo.json  sections_p3qvj9hO_Bo.json  summarized_sections_p3qvj9hO_Bo.json
ui/: __init__.py  interface.py
